gitignore update and WF added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 /dist
-/fn_ldap_multidomain_utilities.egg-info
 /temp
+build/
+__pycache__
+.DS_Store
+.gradle
+.cache
+.pytest_cache
+.coverage
+.swp
+.eggs
+.vscode/
+resilient_circuits_lockfile
+*.iml
+*.pem
+*.pyc
+*.log
+*.log.*
+*.egg-info
+*.tar.gz
+*.pytest_cache
+*.bak
